# recommendations

./: README.md  assert-struct.toml  serde.toml
.github/workflows/: validate-and-publish.yml  validate.yml
assert-struct/: SKILL.md
dial9/: SYMPOSIUM.toml
error-battery-pack/: SYMPOSIUM.toml
formality-core/: SKILL.md
recommendations/: cargo.toml  rust-analyzer.toml  sparkle.toml
rtk/: rtk.toml
rust/rust-best-practice/: SKILL.md
skills/assert-struct/assert-struct-cheat-sheet/: SKILL.md
skills/assert-struct/assert-struct-cheat-sheet/resources/: LLM.txt
skills/symposium-rust-lang/: SKILL.md
symposium/: SYMPOSIUM.toml
symposium/find-crate-source/: SKILL.md
symposium/rust-best-practice/: SKILL.md
toasty/: SKILL.md
toasty/resources/: LLM.txt
validator/: Cargo.toml
validator/src/: main.rs
